--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Movie Dubs</title>
+    <title>Movie Duds</title>
     <base href="https://nicklaranjeiro.github.io/AngularMovieViewer/">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
